Fix layout bugs

--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -143,7 +143,7 @@ html {
         top: 50px;
         left: 0;
         width: 100%;
-        height: 100%;
+        height: calc(100% - #{$navbar-height});
         overflow: auto;
 
         .close_button {
